# production_grade_rag_pipeline

./: main.py  pyproject.toml  requirements.txt
app/: config.py  main.py
app/agents/: graph.py  state.py
app/agents/nodes/: planner.py  responder.py  retriever.py
app/gateway/: client.py
app/ingestion/chunking/: splitter.py
app/ingestion/loaders/: html.py  office.py  text.py
app/services/retrieval/: qdrant_service.py  ranking_service.py
