[project]
name = "production-grade-rag-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4",
    "deepeval",
    "fastapi",
    "flashrank",
    "google-generativeai",
    "langchain",
    "langchain-community",
    "langchain-google-genai",
    "langchain-google-vertexai",
    "langchain-groq",
    "langchain-nvidia-ai-endpoints",
    "langchain-openai",
    "langfuse",
    "langgraph",
    "langsmith",
    "logfire[fastapi,requests]",
    "loguru",
    "nemoguardrails",
    "nest-asyncio",
    "numpy",
    "pdfplumber",
    "portkey-ai",
    "pydantic>=2.0.0",
    "pypdf",
    "python-docx",
    "python-dotenv",
    "python-pptx",
    "pytz",
    "qdrant-client",
    "ragas",
    "requests",
    "sentence-transformers",
    "streamlit",
    "unstructured>=0.14.0",
    "uvicorn[standard]",
]
